# cargo-maintenance-score

./: Cargo.toml  README.md
src/: crate_info.rs  main.rs
