[package]
name = "cargo-maintenance-score"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
colored = "2.1"
chrono = "0.4"
toml = "0.8"
cargo_metadata = "0.18"
