[package]
name = "cargo-maintenance-score"  # Must match the available name
version = "0.1.0"                 # 0.1.0 initial release
edition = "2024"                  
description = "A Cargo subcommand to detect unmaintained and risky dependencies with a health score"
license = "MIT"                   # MIT
repository = "https://github.com/olatunbosunoyeleke94/cargo-maintenance-score"
keywords = ["cargo", "maintenance", "dependencies", "cli", "hackathon"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"


[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
colored = "2.1"
chrono = "0.4"
toml = "0.8"
cargo_metadata = "0.18"
